--- a/inst/scripts/segmentation.Rnw
+++ b/inst/scripts/segmentation.Rnw
@@ -1,6 +1,7 @@
 <<segmentation>>=
 library(oligoClasses)
-NN <- 600
+NN <- 1000
+CHR <- 1
 sampleBatch <- splitIndicesByLength(1:7599, NN)
 for(KK in 1:length(sampleBatch)){
 	sink("temp")
@@ -8,6 +9,7 @@ for(KK in 1:length(sampleBatch)){
 	cat("sourceSubmitter <- FALSE \n")
 	cat("batch <- ", KK, "\n")
 	cat("NN <- ", NN, "\n")
+	cat("CHR <- ", CHR, "\n")
 	sink()
 	fn <- paste("tmp_", KK, ".R", sep="")
 	if(file.exists(fn)) unlink(fn)
